--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1083,6 +1083,10 @@ PANELS CONFIGURATIONS
 	box-shadow: 0px 3px 2px #aab2bd;
 	padding-top: 15px;
 	padding-bottom: 5px;
+    padding-left:  10px;
+    padding-right: 10px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 .content-panel h4 {
 	margin-left: 10px;
