Validacion pacientes e imagenes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,11 +17,18 @@ Website: http://Alvarez.is/
 /* BASIC THEME CONFIGURATION */
 body {
     color: #797979;
-	background: #ffffff;
+    background: #ffffff;
     font-family: 'Ruda', sans-serif;
     padding: 0px !important;
     margin: 0px !important;
     font-size:13px;
+}
+
+.therapy {
+    background-image: url("../img/fondo.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 ul li {
